chore: update to java 11